--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -79,27 +79,27 @@
     <string name="conference_caller_info_name">"Apelul în conferință al %1$s"</string>
     <string name="conference_caller_name_me">Eu</string>
     <string name="conference_callers_exceeded">Numărul maxim de participanți la conferință a fost atins</string>
-    <string name="contactPhoto">Fotografie persoană din agendă</string>
     <string name="contacts_icon_label">Contacte</string>
     <string name="default_area_code_setting">Codul implicit al zonei</string>
-    <string name="description_image_button_answer">Glisați în sus pentru a răspunde</string>
+    <string name="description_image_button_answer">Răspundeți</string>
     <string name="description_image_button_dialpad">Taste numerice</string>
     <string name="description_image_button_eight">opt</string>
     <string name="description_image_button_five">cinci</string>
     <string name="description_image_button_four">patru</string>
     <string name="description_image_button_hangup">Sfârşit</string>
-    <string name="description_image_button_message_enter">Glisați în sus pentru a răspunde cu un mesaj</string>
+    <string name="description_image_button_message_enter">Răspundeți cu un mesaj</string>
     <string name="description_image_button_message_exit">Ascundeţi mesajele</string>
     <string name="description_image_button_nine">nouă</string>
     <string name="description_image_button_one">unu</string>
     <string name="description_image_button_pound">diez</string>
-    <string name="description_image_button_reject">Glisați în sus pentru a respinge</string>
+    <string name="description_image_button_reject">Respingeți</string>
     <string name="description_image_button_seven">şapte</string>
     <string name="description_image_button_six">şase</string>
     <string name="description_image_button_star">steluţă</string>
     <string name="description_image_button_three">trei</string>
     <string name="description_image_button_tools">Opţiuni</string>
     <string name="description_image_button_two">doi</string>
+    <string name="description_image_button_video_answer">Apel video</string>
     <string name="description_image_button_zero">zero</string>
     <string name="description_target_answer">Răspundeţi</string>
     <string name="dialog_activate_livetalk">Verificați numărul</string>
