--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -79,6 +79,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="face_beauty_intelligent_level_3">Ridicat</string>
     <string name="face_beauty_smart">Inteligent</string>
     <string name="image_file_name_format">"'IMG'_ddMMyyyy_HHmmss"</string>
+    <string name="message_snap_double_confirm">Acțiunea curentă pentru apăsarea lungă a butonului de volum este activarea modului NFC, confirmați modificarea?</string>
     <string name="no_storage">Introduceţi un card SD.</string>
     <string name="not_enough_space">Cardul SD este plin</string>
     <string name="object_track_enable_toast">Pentru a selcta un obiect, apăsați simultan două puncte de pe diagonala conturului.</string>
@@ -179,6 +180,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_focusmode_entry_normal">Standard</string>
     <string name="pref_camera_focusmode_title">Mod focus</string>
     <string name="pref_camera_gradienter_title">Îndreptare</string>
+  <string name="pref_camera_groupshot_mode_title">GroupShot</string>
     <string name="pref_camera_hand_night_title">HHT</string>
     <string name="pref_camera_hdr_entry_auto">Automat</string>
     <string name="pref_camera_hdr_entry_live">Live</string>
@@ -209,6 +211,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_long_pressing_shutter_title">Apăsați și țineți apăsat butonul de declanșare pentru a bloca AE/AF/AWB</string>
     <string name="pref_camera_magic_mirror_title">Oglindă magică</string>
     <string name="pref_camera_manual_mode_title">Manual</string>
+  <string name="pref_camera_mono_mode_title">Mono</string>
     <string name="pref_camera_movie_solid_title">Film solid</string>
     <string name="pref_camera_multilevel_entry_high">Ridicat</string>
     <string name="pref_camera_multilevel_entry_higher">Superior</string>
@@ -247,6 +250,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_picturesize_entry_fullscreen">Ecran complet 16:9</string>
     <string name="pref_camera_picturesize_entry_standard">Standard 4:3</string>
     <string name="pref_camera_picturesize_title_simple_mode">Cadru cameră</string>
+  <string name="pref_camera_raw_title">RAW</string>
     <string name="pref_camera_recordlocation_entry_off">Dezactivat</string>
     <string name="pref_camera_recordlocation_entry_on">Activat</string>
     <string name="pref_camera_recordlocation_title">Stocaţi informaţia despre locaţie</string>
@@ -321,6 +325,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_front_mirror_entry_off">Oprit</string>
     <string name="pref_front_mirror_entry_on">Pornit</string>
     <string name="pref_front_mirror_title">Oglindă cameră frontală</string>
+  <string name="pref_groupshot_with_primitive_title">Salvați fotografia primară în modul Groupshot</string>
     <string name="pref_manual_exposure_title">Timp expunere</string>
     <string name="pref_priority_storage_title">Salvaţi pe cardul SD</string>
     <string name="pref_qc_focus_position_title">Focus</string>
@@ -379,25 +384,32 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="simple_mode_button_text_fast_video">Dezactivaţi mişcarea lentă</string>
     <string name="simple_mode_button_text_fisheye">Dezactivaţi Ochi de peşte</string>
     <string name="simple_mode_button_text_gradienter">Dezactivare Îndreptare</string>
+  <string name="simple_mode_button_text_groupshot">Dezactivare GroupShot</string>
     <string name="simple_mode_button_text_hand_night">Dezactivaţi modul nocturn</string>
     <string name="simple_mode_button_text_magic_mirror">Activați Oglinda Magică</string>
     <string name="simple_mode_button_text_manual">Dezactivaţi modul manual</string>
+  <string name="simple_mode_button_text_mono">Dezactivare mod Mono</string>
     <string name="simple_mode_button_text_panorama">Dezactivaţi panorama</string>
+  <string name="simple_mode_button_text_raw">Dezactivare mod RAW</string>
     <string name="simple_mode_button_text_scene">Dezactivaţi modul scenă</string>
     <string name="simple_mode_button_text_slow_video">Dezactivați modul interval de timp</string>
     <string name="simple_mode_button_text_square">Dezactivați modul Pătrat</string>
     <string name="simple_mode_button_text_stereo_mode">Dezactivați modul Stereo</string>
     <string name="simple_mode_button_text_tilt_shift">Dezactivaţi înclinarea</string>
     <string name="simple_mode_button_text_ubifocus">Dezactivaţi modul refocusare</string>
+    <string name="snap_cancel">Renunțați</string>
+    <string name="snap_confirmed">Confirmați</string>
     <string name="spaceIsLow_content_external_storage_priority">Nu mai există spațiu de stocare pe cardul SD</string>
     <string name="spaceIsLow_content_primary_storage_priority">Nu mai există spațiu liber pe stocarea USB</string>
     <string name="start_capture">OK</string>
     <string name="tap_to_exposure">Atingeți pentru a regla manual expunerea</string>
     <string name="tap_to_focus">Atingeţi pentru focusare</string>
     <string name="time_lapse_error">Dimensiune video greşită pentru înregistrarea în intervale de timp</string>
+    <string name="title_snap_double_confirm">Confirmați din nou</string>
     <string name="toast_burst_snap_finished_end">fotografii</string>
     <string name="toast_burst_snap_finished_start">Fotografiere în serie</string>
     <string name="toast_burst_snap_forbidden_when_audio_capture_open">Fotografierea în serie nu este acceptată atunci când captarea vocii este activată</string>
+    <string name="toast_saving">Salvare fotografii…</string>
     <string name="toast_start_audio_capture">Faceţi un sunet pentru a fotografia</string>
     <string name="ubi_focus_capture_fail">Nu a putut fi captată fotografia</string>
     <string name="ubifocus_capture_warning_message">Pentru rezultate optime, imaginea ar trebui să conțină obiecte atât din apropiere (mai puțin de 1 metru de la obiectiv) cât și din depărtare</string>
