--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -539,15 +539,17 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="scan_barcode_to_join">Scanaţi un cod QR pentru a adăuga un album</string>
     <string name="scan_qr_code_buttom_text">Scanaţi codul QR pentru a vizualiza acest album</string>
     <string name="secret_album_display_name">Album ascuns</string>
+    <string name="secret_album_password_first_use_msg">Se va utiliza parola pentru protecția confidențialității. Aceasta este utilizată pentru fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_password_first_use_title">Parola de protecție a confidențialității</string>
     <string name="secret_album_password_update_dialog_cancel">Renunțați</string>
-    <string name="secret_album_password_update_dialog_msg">Aplicația Galerie va utiliza parola de protecție a confidențialității de acum încolo.</string>
+    <string name="secret_album_password_update_dialog_msg">Parola de protecție a confidențialității este utilizată pentru fotografii, notițe, dosare ascunse, etc.</string>
     <string name="secret_album_password_update_dialog_ok">OK</string>
     <string name="secret_album_password_update_dialog_title">Actualizați parola</string>
-    <string name="secret_album_set_pc_password_dialog_msg">Parola de protecție a confidențialității este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
-    <string name="secret_album_set_pc_password_dialog_ok">Setați parola</string>
-    <string name="secret_album_set_pc_password_dialog_title">Setați o nouă parolă</string>
-    <string name="secret_album_set_pc_password_first_use_msg">Se va folosi parola de protecție a confidențialității. Aceasta este valabilă pentru fotografii, notițe, dosare ascunse, etc.</string>
-    <string name="secret_album_set_pc_password_first_use_title">Parola de protecție a confidențialității</string>
+    <string name="secret_album_password_update_first_user_dialog_msg">Parola de protecție a confidențialității este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_password_update_first_user_dialog_title">Actualizați parola</string>
+    <string name="secret_album_set_pc_password_dialog_msg">Se va utiliza parola pentru protejarea confidențialității. Aceasta este utilizată pentru fotografii, notițe, dosare ascunse, etc.</string>
+    <string name="secret_album_set_pc_password_dialog_ok">Setați o nouă parolă</string>
+    <string name="secret_album_set_pc_password_dialog_title">Setați parola</string>
     <string name="secret_reason_space_full">Albumul Cloud este plin</string>
     <string name="secret_reason_too_large">Fișierul este prea mare</string>
     <string name="secret_reason_type_not_support">"Acest tip de fișier nu este suportat"</string>
