--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -7,7 +7,6 @@ Identificatorul pentru reclame este un număr unic asociat permanent telefonului
     <string name="about_settings_summary">Afişaţi informaţiile legale, starea şi versiunea software</string>
     <string name="ac_enable_summary">Setați o parolă pentru lansarea aplicațiilor</string>
     <string name="ac_enable_title">Blocare aplicații</string>
-    <string name="ac_enter_applock">Lansați Blocarea aplicațiilor</string>
     <string name="ac_privacy_mode_sum">Introduceţi parola pentru a anula modul Vizitator</string>
     <string name="ac_privacy_mode_title">Activaţi parola</string>
     <string name="ac_set_apps_title">Selectaţi aplicaţiile pentru blocare</string>
@@ -192,12 +191,10 @@ Administratorul dumneavoastră poate monitoriza și administra setările, accesu
     <string name="app_factory_reset_dlg_title">Dezinstalaţi actualizările?</string>
     <string name="app_floating_window_dlg_disable">"Dezactivarea setărilor ferestrei plutitoare pt. %1$s necesită repornirea aplicației"</string>
     <string name="app_floating_window_dlg_enable">"Activarea setărilor ferestrei plutitoare pt. %1$s necesită repornirea aplicaţiei."</string>
-    <string name="app_forget_pattern"><u>Ați uitat modelul de deblocare?</u></string>
     <string name="app_forward_locked">Aplicaţia este protejată la copiere.</string>
     <string name="app_install_location_summary">Schimbaţi locaţia preferată de instalare pentru noile aplicaţii</string>
     <string name="app_install_location_title">Locaţie preferată de instalare</string>
     <string name="app_invisible">Aplicație invizibilă</string>
-    <string name="app_lock_role_instruction">Protejați-vă aplicațiile private</string>
     <string name="app_memory_use">Utilizarea memoriei</string>
     <string name="app_name_label">Aplicaţie</string>
     <string name="app_not_found_dlg_text">Aplicaţia nu a fost găsită în lista de aplicaţii instalate.</string>
@@ -601,7 +598,26 @@ Conexiunea utilizează semnale Bluetooth de putere redusă."</string>
     <string name="bootloader_apply_step_4">Poate provoca divulgarea sau chiar ștergerea datelor sau chiar cauza daune hardware ireparabile.</string>
     <string name="bootloader_apply_step_5">Asigurați-vă că știți să utilizați modul Fastboot înainte de a îl activa.</string>
     <string name="bootloader_apply_title">Avertisment important!</string>
+    <string name="bootloader_device_bind_already">Adăugat cu succes. Contul Mi este asociat acum cu acest dispozitiv.</string>
+    <string name="bootloader_device_bind_fail">"Nu s-a putut verifica; așteptați un minut sau două și reîncercați"</string>
+    <string name="bootloader_device_bind_msg">Se pregătește adăugarea contului și a dispozitivului…</string>
+    <string name="bootloader_device_bind_no_account">Conectați-vă mai întâi la contul Mi</string>
+    <string name="bootloader_device_bind_no_network">Conectați-vă la rețea și reîncercați</string>
+    <string name="bootloader_locked_answer_1">"Blocăm telefoanele pentru a ne asigura că sunt în siguranță și că datele personale nu sunt furnizate unor terțe părți. Dacă trebuie să accesați modul Fastboot și să instalați un ROM, puteți debloca telefonul."</string>
+    <string name="bootloader_locked_answer_1_warning">"Atenție: Nu veți mai putea utiliza \"Localizarea dispozitivului\" după ce veți debloca telefonul."</string>
+    <string name="bootloader_locked_answer_2">"Atingeți butonul de mai jos pentru a asocia contul Mi cu acest telefon. Accesați apoi site-ul MIUI pentru a descărca aplicația de deblocare și instalați-o pe computer. Adresa de descărcare este:"</string>
+    <string name="bootloader_locked_check_status">Adăugați contul și dispozitivul</string>
+    <string name="bootloader_locked_question_1">De ce trebuie să fie blocate telefoanele?</string>
+    <string name="bootloader_locked_question_2">Înțeleg riscurile dar doresc să-mi deblochez telefonul.</string>
+    <string name="bootloader_status">Stare Deblocare Mi</string>
+    <string name="bootloader_status_locked">Blocat</string>
+    <string name="bootloader_status_locked_info">Acest telefon este blocat</string>
+    <string name="bootloader_status_locked_summary">Telefonul este securizat</string>
+    <string name="bootloader_status_summary">Verificați dacă telefonul este blocat</string>
+    <string name="bootloader_status_unlocked">Deblocat</string>
+    <string name="bootloader_status_unlocked_info">Acest telefon este deblocat</string>
     <string name="bootloader_summary">Actualizați dispozitivul prin USB</string>
+    <string name="bootloader_unlock_webhome">http://en.miui.com/unlock/</string>
     <string name="breathing_light_color_menu_title">Culoare indicator luminos intermitent</string>
     <string name="breathing_light_color_summary">Culoare indicator luminos intermitent pt. notificări</string>
     <string name="breathing_light_freq_summary">Pulsare indicator luminos intermitent la notificări noi</string>
@@ -755,7 +771,7 @@ Conexiunea utilizează semnale Bluetooth de putere redusă."</string>
     <string name="confirm_new_backup_pw_prompt">Reintroduceţi aici noua parolă pentru copia de rezervă completă</string>
     <string name="confirm_privacy_password">Introduceți parola pentru protejarea confidențialității</string>
     <string name="confirm_privacy_password_fingerprint">Scanați amprenta sau introduceți parola pentru protejarea confidențialității</string>
-    <string name="confirm_privacy_password_instruction">Această parolă protejează aplicațiile, mesajele, fotografiile și contactele.</string>
+    <string name="confirm_privacy_password_instruction">Această parolă protejează mesajele, fotografiile și contactele.</string>
     <string name="confirm_reset_aaid">OK</string>
     <string name="connect_to_internet">Conectați-vă la reţea</string>
     <string name="connected_wifi">Conectat</string>
@@ -780,7 +796,7 @@ Conexiunea utilizează semnale Bluetooth de putere redusă."</string>
     <string name="credentials_install_summary">Instalaţi certificate din spaţiul de stocare</string>
     <string name="credentials_not_erased">Nu s-a şters sp. stoc. cert.</string>
     <string name="credentials_old_password">Parola actuală:</string>
-    <string name="credentials_password_too_short">Parola trebuie să conţină minimum 8 caractere.</string>
+    <string name="credentials_password_too_short">Minim 8 caractere.</string>
     <string name="credentials_reset">Ştergeţi acreditările</string>
     <string name="credentials_reset_hint">Eliminaţi întregul conţinut?</string>
     <string name="credentials_reset_summary">Eliminaţi toate certificatele</string>
@@ -2082,8 +2098,6 @@ Selectaţi sistemul de operare de mai jos:"</string>
     <string name="owner_info_settings_summary" />
     <string name="owner_info_settings_title">Info. proprietar</string>
     <string name="packages_subtitle">Pachete incluse</string>
-    <string name="pad_applock">Blocare aplicație</string>
-    <string name="pad_bind_xiaomi_account_success">Contul Mi a fost adăugat cu succes</string>
     <string name="page_layout_1">Duminică 16 august</string>
     <string name="page_layout_10">Setări</string>
     <string name="page_layout_11">Meteo</string>
@@ -2139,11 +2153,6 @@ Selectaţi sistemul de operare de mai jos:"</string>
     <string name="passwordIncorrect">Parola introdusă este incorectă</string>
     <string name="password_entrance_title">Blocare ecran</string>
     <string name="password_guard">Blocare</string>
-    <string name="password_promotion_button_text">Adăugați contul Mi</string>
-    <string name="password_promotion_message">Adăugați contul dvs. Mi (%s) pentru a vă putea reseta parola în cazul în care o veți uita.</string>
-    <string name="password_promotion_not_login_xiaomi_account_message">Adăugați contul dvs. Mi pentru a vă putea reseta parola în cazul în care o veți uita.</string>
-    <string name="password_promotion_postbutton_text">Adăugați</string>
-    <string name="password_promotion_title">Adăugați contul Mi</string>
     <string name="path_about_about_settings">Setări/Despre telefon</string>
     <string name="path_accelerometer_settings">Setări/Afișaj/Rotire automată a ecranului</string>
     <string name="path_access_control_settings">Setări/Setări adiționale/Confidențialitate/Setări pentru confidențialitate</string>
@@ -2467,7 +2476,7 @@ Selectaţi sistemul de operare de mai jos:"</string>
     <string name="privacy_password_fingerprint_dialog_message">Plasați degetul pe senzor</string>
     <string name="privacy_password_fingerprint_dialog_title">Scanați amprenta</string>
     <string name="privacy_password_settings">Utilizați parola de protejare a confidențialității</string>
-    <string name="privacy_password_settings_titles">Parola de protejare a confidențialității vă protejează mesajele, fotografiile, notițele și aplicațiile.</string>
+    <string name="privacy_password_settings_titles">Parola de protejare a confidențialității vă protejează mesajele, fotografiile, notițele și fișierele.</string>
     <string name="privacy_password_title">Parola de protejare a confidențialității</string>
     <string name="privacy_password_transparent_tiltle"/>
     <string name="privacy_password_visible_pattern">Arată modelul de deblocare</string>
@@ -2981,6 +2990,7 @@ Pentru a utiliza fixarea ecranului:
     <string name="secure_lock_encryption_warning">"Deoarece ați activat un serviciu de accesibilitate, dispozitivul nu va utiliza parola de blocare a ecranului pentru criptarea datelor."</string>
     <string name="security_enable_widgets_disabled_summary">Setare dezactivată de administrator</string>
     <string name="security_enable_widgets_title">Activați widgeturi</string>
+    <string name="security_encryption_progress_dialog_open">Criptare…</string>
     <string name="security_encryption_title">Criptați telefonul utilizând parola de blocare a ecranului</string>
     <string name="security_keyguard_category_name">Blocare ecran</string>
     <string name="security_password_category_name">Blocare ecran</string>
@@ -3152,6 +3162,13 @@ Codul PIN poate fi incorect."</string>
     <string name="sim_status_summary">Informații despre cartela SIM</string>
     <string name="sim_status_title">Stare SIM</string>
     <string name="simulate_color_space">Simulați spațiul de culori</string>
+    <string name="size_byte">B</string>
+    <string name="size_giga_byte">GB</string>
+    <string name="size_kilo_byte">KB</string>
+    <string name="size_mega_byte">MB</string>
+    <string name="size_peta_byte">PB</string>
+    <string name="size_suffix">%1$s%2$s</string>
+    <string name="size_tera_byte">TB</string>
     <string name="skip_label">Omiteţi</string>
     <string name="skip_lock_screen_confirm_msg">Notificările, controalele muzicale, Camera și Mi Home vor fi dezactivate pe blocarea ecranului.</string>
     <string name="skip_step">Omiteţi</string>
