--- a/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
@@ -59,6 +59,7 @@
     <string name="custom_wallpaper_picker">Răsfoiţi</string>
     <string name="default_folder_title_claro">Claro</string>
     <string name="default_folder_title_game">Jocuri</string>
+    <string name="default_folder_title_microsoft">Microsoft</string>
     <string name="default_folder_title_recommend">Alte aplicaţii</string>
     <string name="default_folder_title_security">Sistem</string>
     <string name="default_folder_title_telcel">Telcel</string>
